# vitalog

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci-cd.yml
src/vitalog/: __init__.py  __main__.py  console.py  db.py  logging.py
src/vitalog/dashboard/: maps.py  queries.py  render.py  template.html
src/vitalog/etl/: apple.py  gpx.py  sleep.py
src/vitalog/narrative/: generate.py  prompt.py  queries.py
tests/: conftest.py  test_cli.py  test_console.py  test_dashboard_queries.py  test_db.py  test_etl_apple.py  test_etl_apple_integration.py  test_etl_gpx.py  test_etl_sleep.py  test_logging.py  test_narrative_prompt.py  test_narrative_queries.py  test_package.py  test_profile.py
